# Argos

./: .gitignore  README.md  notebook3b5a3f71b0.ipynb
Argos/: Client.py  Dataset_utils.py  Model.py  dataset.py  pyproject.toml  settings.py  utils.py
Argos/notebooks/: FL-testing.ipynb  Kagglable-FL-testing.ipynb  Kagglable-Model-testing.ipynb  model-testing.ipynb
Argos/src/: client.py  client_app.py  dataset.py  dataset_utils.py  model.py  model_manager.py  server_app.py  settings.py  task.py  utils.py
